data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3882.wast
;; 1. **Test Description**:    - **Scenario**: Call an imported function that expects three parameters but provide only two.    - **Constraint**: Verify the immediate operand usage for function calls ensuring the stack correctly represents the number of parameters required.    - **Differential Check**: Ensure both WebAssembly and wizard_engine handle the stack operations without corruption when parameters are mismatched.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (param i32 i32 i32)))
    (func $test-call (call $imported_func (i32.const 1) (i32.const 2)))
  )
  "type mismatch"
)